# sosignature

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
src/: sloth.cxx  sosignature.cxx
